--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		$(document).ready(function() {
 			log('Connecting...');
-			Server = new FancyWebSocket('ws://127.0.0.1:9300');
+			Server = new FancyWebSocket('http://flirt-nahthing.rhcloud.com/');
 
 			$('#message').keypress(function(e) {
 				if ( e.keyCode == 13 && this.value ) {
