--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		$(document).ready(function() {
 			log('Connecting...');
-			Server = new FancyWebSocket('ws://127.0.0.1:9300');
+			Server = new FancyWebSocket('ws://flirt-nahthing.rhcloud.com:8000');
 
 			$('#message').keypress(function(e) {
 				if ( e.keyCode == 13 && this.value ) {
@@ -60,7 +60,9 @@
 </head>
 
 <body>
+
 	<div id='body'>
+	<p>Updated</p>
 		<textarea id='log' name='log' readonly='readonly'></textarea><br/>
 		<input type='text' id='message' name='message' />
 	</div>
